getDisplayMedia MediaStreamTrack.applyConstraints behavior regressed in Safari 15 https://bugs.webkit.org/show_bug.cgi?id=231286 <rdar://problem/83930865>

Reviewed by Eric Carlson.

Source/WebKit:

Display tracks are different in that they do not have presets.
Revert back to directly linking the WebProcess track with the remote display source without going through RealtimeVideoSource.
This restores past behavior.
Refactoring of UserMediaCaptureManager to use a single map.
We do not yet support cloning tracks to get different sizes, this should be done as a follow-up.

Covered by fast/mediastream/getDisplayMedia-size.html.

* SourcesCocoa.txt:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/cocoa/RemoteCaptureSampleManager.cpp:
* WebProcess/cocoa/RemoteCaptureSampleManager.h:
* WebProcess/cocoa/RemoteRealtimeAudioSource.cpp:
* WebProcess/cocoa/RemoteRealtimeAudioSource.h:
* WebProcess/cocoa/RemoteRealtimeDisplaySource.cpp: Added.
* WebProcess/cocoa/RemoteRealtimeDisplaySource.h: Added.
* WebProcess/cocoa/RemoteRealtimeVideoSource.cpp:
* WebProcess/cocoa/UserMediaCaptureManager.cpp:
* WebProcess/cocoa/UserMediaCaptureManager.h:

LayoutTests:

* fast/mediastream/getDisplayMedia-size-expected.txt: Added.
* fast/mediastream/getDisplayMedia-size.html: Added.
* platform/ios/TestExpectations: Added.


Canonical link: https://commits.webkit.org/243206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284444 268f45cc-cd09-0410-ab3c-d52691b4dbfc