Source/WebKit/WebProcess/cocoa/RemoteRealtimeDisplaySource.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -24,46 +24,38 @@
  */
 
 #include "config.h"
-#include "RemoteRealtimeAudioSource.h"
+#include "RemoteRealtimeDisplaySource.h"
 
 #if PLATFORM(COCOA) && ENABLE(MEDIA_STREAM)
 
-#include "GPUProcessConnection.h"
-#include "SharedRingBufferStorage.h"
 #include "UserMediaCaptureManager.h"
 #include "UserMediaCaptureManagerMessages.h"
 #include "UserMediaCaptureManagerProxyMessages.h"
 #include "WebCoreArgumentCoders.h"
 #include "WebProcess.h"
 #include <WebCore/MediaConstraints.h>
-#include <WebCore/RealtimeMediaSource.h>
-#include <WebCore/RealtimeMediaSourceCenter.h>
-#include <WebCore/WebAudioBufferList.h>
 
 namespace WebKit {
 using namespace WebCore;
 
-Ref<RealtimeMediaSource> RemoteRealtimeAudioSource::create(const CaptureDevice& device, const MediaConstraints* constraints, String&& name, String&& hashSalt, UserMediaCaptureManager& manager, bool shouldCaptureInGPUProcess)
+Ref<RealtimeMediaSource> RemoteRealtimeDisplaySource::create(const CaptureDevice& device, const MediaConstraints* constraints, String&& name, String&& hashSalt, UserMediaCaptureManager& manager, bool shouldCaptureInGPUProcess)
 {
-    auto source = adoptRef(*new RemoteRealtimeAudioSource(RealtimeMediaSourceIdentifier::generate(), device, constraints, WTFMove(name), WTFMove(hashSalt), manager, shouldCaptureInGPUProcess));
+    auto source = adoptRef(*new RemoteRealtimeDisplaySource(RealtimeMediaSourceIdentifier::generate(), device, constraints, WTFMove(name), WTFMove(hashSalt), manager, shouldCaptureInGPUProcess));
     manager.addSource(source.copyRef());
     manager.remoteCaptureSampleManager().addSource(source.copyRef());
     source->createRemoteMediaSource();
     return source;
 }
 
-RemoteRealtimeAudioSource::RemoteRealtimeAudioSource(RealtimeMediaSourceIdentifier identifier, const CaptureDevice& device, const MediaConstraints* constraints, String&& name, String&& hashSalt, UserMediaCaptureManager& manager, bool shouldCaptureInGPUProcess)
-    : RealtimeMediaSource(RealtimeMediaSource::Type::Audio, WTFMove(name), String { device.persistentId() }, WTFMove(hashSalt))
+RemoteRealtimeDisplaySource::RemoteRealtimeDisplaySource(RealtimeMediaSourceIdentifier identifier, const CaptureDevice& device, const MediaConstraints* constraints, String&& name, String&& hashSalt, UserMediaCaptureManager& manager, bool shouldCaptureInGPUProcess)
+    : RealtimeMediaSource(RealtimeMediaSource::Type::Video, WTFMove(name), String { device.persistentId() }, WTFMove(hashSalt))
     , m_proxy(identifier, device, shouldCaptureInGPUProcess, constraints)
     , m_manager(manager)
 {
-    ASSERT(device.type() == CaptureDevice::DeviceType::Microphone);
-#if PLATFORM(IOS_FAMILY)
-    RealtimeMediaSourceCenter::singleton().audioCaptureFactory().setActiveSource(*this);
-#endif
+    ASSERT(device.type() == CaptureDevice::DeviceType::Screen || device.type() == CaptureDevice::DeviceType::Window);
 }
 
-void RemoteRealtimeAudioSource::createRemoteMediaSource()
+void RemoteRealtimeDisplaySource::createRemoteMediaSource()
 {
     m_proxy.createRemoteMediaSource(deviceIDHashSalt(), [this, protectedThis = Ref { *this }](bool succeeded, auto&& errorMessage, auto&& settings, auto&& capabilities, auto&&, auto, auto) {
         if (!succeeded) {
@@ -81,81 +73,63 @@ void RemoteRealtimeAudioSource::createRemoteMediaSource()
     });
 }
 
-RemoteRealtimeAudioSource::~RemoteRealtimeAudioSource()
+RemoteRealtimeDisplaySource::~RemoteRealtimeDisplaySource()
 {
     if (m_proxy.shouldCaptureInGPUProcess()) {
         if (auto* connection = WebProcess::singleton().existingGPUProcessConnection())
             connection->removeClient(*this);
     }
-
-#if PLATFORM(IOS_FAMILY)
-    RealtimeMediaSourceCenter::singleton().audioCaptureFactory().unsetActiveSource(*this);
-#endif
 }
 
-void RemoteRealtimeAudioSource::setCapabilities(RealtimeMediaSourceCapabilities&& capabilities)
+void RemoteRealtimeDisplaySource::setCapabilities(RealtimeMediaSourceCapabilities&& capabilities)
 {
     m_capabilities = WTFMove(capabilities);
 }
 
-void RemoteRealtimeAudioSource::setSettings(RealtimeMediaSourceSettings&& settings)
+void RemoteRealtimeDisplaySource::setSettings(RealtimeMediaSourceSettings&& settings)
 {
     auto changed = m_settings.difference(settings);
     m_settings = WTFMove(settings);
     notifySettingsDidChangeObservers(changed);
 }
 
-void RemoteRealtimeAudioSource::applyConstraintsSucceeded(WebCore::RealtimeMediaSourceSettings&& settings)
+void RemoteRealtimeDisplaySource::applyConstraintsSucceeded(WebCore::RealtimeMediaSourceSettings&& settings)
 {
     setSettings(WTFMove(settings));
     m_proxy.applyConstraintsSucceeded();
 }
 
-void RemoteRealtimeAudioSource::remoteAudioSamplesAvailable(const MediaTime& time, const PlatformAudioData& data, const AudioStreamDescription& description, size_t size)
-{
-    ASSERT(!isMainRunLoop());
-    audioSamplesAvailable(time, data, description, size);
-}
-
-void RemoteRealtimeAudioSource::hasEnded()
+void RemoteRealtimeDisplaySource::hasEnded()
 {
     m_proxy.hasEnded();
     m_manager.removeSource(identifier());
     m_manager.remoteCaptureSampleManager().removeSource(identifier());
 }
 
-void RemoteRealtimeAudioSource::captureStopped()
+void RemoteRealtimeDisplaySource::captureStopped()
 {
     stop();
     hasEnded();
 }
 
-void RemoteRealtimeAudioSource::captureFailed()
+void RemoteRealtimeDisplaySource::captureFailed()
 {
     RealtimeMediaSource::captureFailed();
     hasEnded();
 }
 
-void RemoteRealtimeAudioSource::applyConstraints(const MediaConstraints& constraints, ApplyConstraintsHandler&& callback)
+void RemoteRealtimeDisplaySource::applyConstraints(const MediaConstraints& constraints, ApplyConstraintsHandler&& callback)
 {
     m_constraints = constraints;
     m_proxy.applyConstraints(constraints, WTFMove(callback));
 }
 
 #if ENABLE(GPU_PROCESS)
-void RemoteRealtimeAudioSource::gpuProcessConnectionDidClose(GPUProcessConnection&)
+void RemoteRealtimeDisplaySource::gpuProcessConnectionDidClose(GPUProcessConnection&)
 {
     ASSERT(m_proxy.shouldCaptureInGPUProcess());
     if (isEnded())
         return;
-
-#if PLATFORM(IOS_FAMILY)
-    if (this != RealtimeMediaSourceCenter::singleton().audioCaptureFactory().activeSource()) {
-        // Track is muted and has no chance of being unmuted, let's end it.
-        captureFailed();
-        return;
-    }
-#endif
 
     m_manager.remoteCaptureSampleManager().didUpdateSourceConnection(connection());
     m_proxy.resetReady();
